--- a/site/index.html
+++ b/site/index.html
@@ -4,7 +4,8 @@
 	<title>WADDUP</title>
 </head>
 <body>
-<h1>Here that come's</h1>
-<a img href="https://i1.sndcdn.com/artworks-000161572101-246jvt-t500x500.jpg"></a> 
+<h1>Here that's come</h1>
+<h2>Oh shit, waddup</h2>
+<img src ="https://i1.sndcdn.com/artworks-000161572101-246jvt-t500x500.jpg">
 </body>
 </html>
