--- a/site/index.html
+++ b/site/index.html
@@ -1,11 +1,27 @@
 <!DOCTYPE html>
-<html>
-<head>
-	<title>WADDUP</title>
-</head>
-<body>
-<h1>Here that's come</h1>
-<h2>Oh shit, waddup</h2>
-<img src ="https://i1.sndcdn.com/artworks-000161572101-246jvt-t500x500.jpg">
-</body>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="shortcut icon" href="d:/Archive/sniger.png" type="image/x-icon">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <title>Coursera-test</title>
+  </head>
+  <body>
+  	<h1>Our menu</h1>
+      <div class="container-fluid">
+    	<div class="row">
+  <div class="col-md-4 col-sm-6" id="d1">
+  <p><span class="d1">Chicken</span>sample text sample text sample text sample text sample text sample text sample text sample text sample text sample text sample text sample text sample text sample text</p>
+  </div>
+  <div class="col-md-4 col-sm-6" id="d2">
+  <p><span class="d1">Beef</span>sample text sample text sample text sample text sample text sample text sample text sample text sample text sample text sample text sample text sample text sample text</p>
+  </div>
+  <div class="col-md-4 col-sm-6" id="d3">
+  <p><span class="d1">Sushi</span>sample text sample text sample text sample text sample text sample text sample text sample text sample text sample text sample text sample text sample text sample text</p>
+  </div>
+		</div>
+    </div>
+  </body>
 </html>
